--- a/src/scss/components/_effects.scss
+++ b/src/scss/components/_effects.scss
@@ -209,7 +209,7 @@
       display: flex;
       align-items: center;
       
-      select, input {
+      select {
         display: block;
         width: 100%;
         height: 2.5rem;
@@ -223,29 +223,39 @@
         border-radius: 5px;
         appearance: none;
         -webkit-appearance: none;
-        
-        &:focus {
-          outline: none;
-          border-color: colors.$input-focus;
-          box-shadow: 
-            0 0 0 1px rgba(255, 255, 255, 0.1),
-            inset 0 1px 3px rgba(0, 0, 0, 0.7);
-        }
-
-        &:hover {
-          box-shadow: 
-            0 0 0 1px rgba(255, 255, 255, 0.1),
-            inset 0 1px 3px rgba(0, 0, 0, 0.7);
-        }
       }
       
-      // Special styling for select elements
-      select {
-        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23ffffff' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E");
-        background-repeat: no-repeat;
-        background-position: right 0.5rem center;
-        background-size: 8px 10px;
-        padding-right: 1.5rem;
+      // Keep base styling for standard inputs
+      input:not(.base-form__number-input) {
+        display: block;
+        width: 100%;
+        height: 2.5rem;
+        padding: 0.5rem;
+        color: colors.$input-text;
+        background-color: colors.$input-bg !important;
+        border: none;
+        box-shadow: 
+          0 0 0 1px rgba(0, 0, 0, 0.8),
+          inset 0 1px 3px rgba(0, 0, 0, 0.6);
+        border-radius: 5px;
+        appearance: none;
+        -webkit-appearance: none;
+      }
+      
+      // Style for number input wrapper
+      .base-form__number-input-wrapper {
+        width: 100%;
+        
+        // Ensure buttons are visible by default
+        .increment, .decrement {
+          display: flex;
+        }
+        
+        // Override grid cell styling for number inputs
+        .base-form__number-input {
+          background-color: colors.$input-bg !important;
+          color: colors.$input-text;
+        }
       }
       
       button {
