Added a left leaning toggle switch that allows for multi-line inputs to look good.

--- a/src/scss/global/_form-elements.scss
+++ b/src/scss/global/_form-elements.scss
@@ -402,6 +402,14 @@
     }
   }
   
+  &__toggle-switch-left {
+    @include mixins.grid-compliant-toggle-switch-left;
+    & ~ .toggle-switch-display {
+      margin-right: auto; // Push to the left side of the container
+      cursor: pointer; // Make it clear this is clickable
+    }
+  }
+  
   // Style for groups containing toggle switches
   &__toggle-group {
     display: flex;
