--- a/templates/macros/damage-targets.hbs
+++ b/templates/macros/damage-targets.hbs
@@ -28,7 +28,7 @@
       <input class="base-form__text-input" placeholder="{{localize "EVENTIDE_RP_SYSTEM.Forms.Placeholders.Formula"}}" name="formula" value="{{lookup storedData (lookup storageKeys 2)}}">
     </div>
     <div class="base-form__group base-form__group--checkbox">
-      <label class="base-form__label" for="isHeal">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.IsHeal"}}:</label>
+      <label class="base-form__label--checkbox" for="isHeal">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.IsHeal"}}:</label>
       <div class="toggle-switch-wrapper">
         <input class="base-form__toggle-switch" type="checkbox" name="isHeal" id="isHeal" {{checked heal}}>
         <label class="toggle-switch-display" for="isHeal"></label>
