--- a/css/eventide-rp-system.css
+++ b/css/eventide-rp-system.css
@@ -803,13 +803,22 @@
   gap: 0.75rem;
 }
 .base-form__label, .popup-form__label {
-  display: block;
-  font-size: 1rem;
-  font-weight: bold;
+  font-family: inherit;
+  font-size: 1.125rem;
+  font-weight: 700;
   color: var(--eventide-rp-system-label-text);
-  margin: 0;
-  flex: 0 0 120px;
-  min-width: 120px;
+  margin-bottom: 0.375rem;
+  display: block;
+  font-size: 1.125rem;
+}
+.base-form__label--checkbox {
+  font-family: inherit;
+  font-size: 1.125rem;
+  font-weight: 700;
+  color: var(--eventide-rp-system-label-text);
+  margin-bottom: 0.375rem;
+  display: block;
+  cursor: pointer;
 }
 .base-form__label--inline {
   display: inline-block;
